force-app/main/default/objects/Product2/fields/Online_Description_Rexel__c.field-meta.xml
<CustomField>
    <fullName>Online_Description_Rexel__c</fullName>
    <description>Rexel Data</description>
    <label>Online Description - Rexel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>