force-app/main/default/objects/Product2/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <description>LUCKINS DATA</description>
    <label>Other Description</label>
    <type>TextArea</type>
</CustomField>