force-app/main/default/objects/Product2/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <label>Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anti Static Bag</fullName>
            </value>
            <value>
                <fullName>Blister Pack</fullName>
            </value>
            <value>
                <fullName>Bulk Pack</fullName>
            </value>
            <value>
                <fullName>Foil Bag</fullName>
            </value>
            <value>
                <fullName>Individual Box</fullName>
            </value>
            <value>
                <fullName>Tube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>