force-app/main/default/objects/Product2/fields/Plug__c.field-meta.xml
<CustomField>
    <fullName>Plug__c</fullName>
    <label>Plug</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.1 x 5.5 x 11mm</fullName>
            </value>
            <value>
                <fullName>2.1 x 5.5 x 11mm tuning fork</fullName>
            </value>
            <value>
                <fullName>3 Pin XLR</fullName>
            </value>
            <value>
                <fullName>4 Pin DIN</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>Anderson</fullName>
            </value>
            <value>
                <fullName>Anderson Connector</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>Changeable Plug</fullName>
            </value>
            <value>
                <fullName>EURO</fullName>
            </value>
            <value>
                <fullName>EURO 2 Pin</fullName>
            </value>
            <value>
                <fullName>Interchangeable AC Plug</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Shuko</fullName>
            </value>
            <value>
                <fullName>Terminal Block</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>USA 2 Pin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>