force-app/main/default/objects/Product2/fields/Polarity__c.field-meta.xml
<CustomField>
    <fullName>Polarity__c</fullName>
    <label>Polarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>by fuse open</fullName>
            </value>
            <value>
                <fullName>Centre Negative</fullName>
            </value>
            <value>
                <fullName>Centre Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>