force-app/main/default/objects/Product2/fields/Product_Bend__c.field-meta.xml
<CustomField>
    <fullName>Product_Bend__c</fullName>
    <label>Product Bend</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3cm</fullName>
            </value>
            <value>
                <fullName>5cm</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>