force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>LUCKINS DATA</description>
    <label>Product (Category)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batten</fullName>
            </value>
            <value>
                <fullName>Bezel</fullName>
            </value>
            <value>
                <fullName>Cabinet Light</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>D/D Module</fullName>
            </value>
            <value>
                <fullName>D/D on board</fullName>
            </value>
            <value>
                <fullName>Dimmer Switch</fullName>
            </value>
            <value>
                <fullName>Distribution Box</fullName>
            </value>
            <value>
                <fullName>Downlight</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Enclosed Power Supply</fullName>
            </value>
            <value>
                <fullName>Extrusion</fullName>
            </value>
            <value>
                <fullName>Floodlight</fullName>
            </value>
            <value>
                <fullName>Hat</fullName>
            </value>
            <value>
                <fullName>High Bay</fullName>
            </value>
            <value>
                <fullName>Junction Box</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>LED Driver</fullName>
            </value>
            <value>
                <fullName>LED Flexible Tape</fullName>
            </value>
            <value>
                <fullName>LED Flexible Tape Tuneable White</fullName>
            </value>
            <value>
                <fullName>LED High Bay</fullName>
            </value>
            <value>
                <fullName>LED Power Supply</fullName>
            </value>
            <value>
                <fullName>LED Strip</fullName>
            </value>
            <value>
                <fullName>LED Wall Pack</fullName>
            </value>
            <value>
                <fullName>Light Bar</fullName>
            </value>
            <value>
                <fullName>Lighting Kit</fullName>
            </value>
            <value>
                <fullName>Low Bay</fullName>
            </value>
            <value>
                <fullName>PIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>