force-app/main/default/objects/Product2/fields/Product_Range_Major__c.field-meta.xml
<CustomField>
    <fullName>Product_Range_Major__c</fullName>
    <description>LUCKINS DATA</description>
    <label>Product Range Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controllers &amp; Repeaters</fullName>
            </value>
            <value>
                <fullName>DIN Rail Power Supplies</fullName>
            </value>
            <value>
                <fullName>LED Batten Lights</fullName>
            </value>
            <value>
                <fullName>LED Downlights</fullName>
            </value>
            <value>
                <fullName>LED Drivers</fullName>
            </value>
            <value>
                <fullName>LED Flexible Strips</fullName>
            </value>
            <value>
                <fullName>LED Floodlights</fullName>
            </value>
            <value>
                <fullName>LED High Bay Lights</fullName>
            </value>
            <value>
                <fullName>LED Light Bars</fullName>
            </value>
            <value>
                <fullName>LED Lighting Accessories</fullName>
            </value>
            <value>
                <fullName>LED Lighting Kits</fullName>
            </value>
            <value>
                <fullName>LED Lighting Products</fullName>
            </value>
            <value>
                <fullName>LED Low Bay Lights</fullName>
            </value>
            <value>
                <fullName>LED Wall Packs</fullName>
            </value>
            <value>
                <fullName>Power Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>