force-app/main/default/objects/Product2/fields/Product_Range_Minor__c.field-meta.xml
<CustomField>
    <fullName>Product_Range_Minor__c</fullName>
    <label>Product Range Minor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5M Flexible LED Tape</fullName>
            </value>
            <value>
                <fullName>AC LIGHTSTICK</fullName>
            </value>
            <value>
                <fullName>AC LIGHTSTICK Accessories</fullName>
            </value>
            <value>
                <fullName>Aluminium Extrusions</fullName>
            </value>
            <value>
                <fullName>BERM</fullName>
            </value>
            <value>
                <fullName>Blade2 Floodlights</fullName>
            </value>
            <value>
                <fullName>CONNECT Accessories</fullName>
            </value>
            <value>
                <fullName>Connect Drivers</fullName>
            </value>
            <value>
                <fullName>Connect Light Bars</fullName>
            </value>
            <value>
                <fullName>Constant Current IP67</fullName>
            </value>
            <value>
                <fullName>Constant Voltage</fullName>
            </value>
            <value>
                <fullName>Constant Voltage Dimming Controller</fullName>
            </value>
            <value>
                <fullName>Constant Voltage IP64</fullName>
            </value>
            <value>
                <fullName>Constant Voltage IP67</fullName>
            </value>
            <value>
                <fullName>Constant Voltage Triac Dimming</fullName>
            </value>
            <value>
                <fullName>CV &amp; CC Dimming IP67</fullName>
            </value>
            <value>
                <fullName>Dimmer Switch</fullName>
            </value>
            <value>
                <fullName>DIN Rail Power Supplies</fullName>
            </value>
            <value>
                <fullName>Emergency Lighting</fullName>
            </value>
            <value>
                <fullName>Flex Floodlights</fullName>
            </value>
            <value>
                <fullName>FLEX-PIR Floodlights</fullName>
            </value>
            <value>
                <fullName>GEN2 Highbays</fullName>
            </value>
            <value>
                <fullName>Highbay LED Lighting</fullName>
            </value>
            <value>
                <fullName>Indoor LED Lighting</fullName>
            </value>
            <value>
                <fullName>LED Flexible Strip Joining Connectors</fullName>
            </value>
            <value>
                <fullName>LED Flexible Strip Solderless Joining Connectors</fullName>
            </value>
            <value>
                <fullName>LED Flexible Strip Splice Joining Connectors</fullName>
            </value>
            <value>
                <fullName>LED Flexi Strips</fullName>
            </value>
            <value>
                <fullName>LED Hat</fullName>
            </value>
            <value>
                <fullName>LED Lighting Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>