force-app/main/default/objects/Product2/fields/Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>Product_Tag__c</fullName>
    <label>Product Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Battery Maintenance</fullName>
            </value>
            <value>
                <fullName>ECO</fullName>
            </value>
            <value>
                <fullName>EV Charging</fullName>
            </value>
            <value>
                <fullName>Food Processing</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>LED Display</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Telecoms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>