force-app/main/default/objects/Product2/fields/Product_Type_Luckins__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Luckins__c</fullName>
    <description>LUCKINS DATA</description>
    <label>Product Type - Luckins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>