force-app/main/default/objects/Product2/fields/Purchase_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Lead_Time__c</fullName>
    <label>Purchase Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>