force-app/main/default/objects/Product2/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <label>Quantity Available</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>