force-app/main/default/objects/Product2/fields/Quantity_Back_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Back_Ordered__c</fullName>
    <label>Quantity Back Ordered</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>