force-app/main/default/objects/Product2/fields/Quantity_Committed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Committed__c</fullName>
    <inlineHelpText>Looking 3 days ahead</inlineHelpText>
    <label>Quantity Committed</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>