force-app/main/default/objects/Product2/fields/Quantity_in_Transit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_Transit__c</fullName>
    <label>Quantity in Transit</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>