force-app/main/default/objects/Product2/fields/Quantity_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_Hand__c</fullName>
    <label>Quantity on Hand</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>