force-app/main/default/objects/Product2/fields/Quantity_On_Order_SO__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Order_SO__c</fullName>
    <label>Quantity On Order (SO)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>