force-app/main/default/objects/Product2/fields/Rapid_SKU__c.field-meta.xml
<CustomField>
    <fullName>Rapid_SKU__c</fullName>
    <label>Rapid SKU</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>