force-app/main/default/objects/Product2/fields/Regions_Should_NOT_be_sold_in__c.field-meta.xml
<CustomField>
    <fullName>Regions_Should_NOT_be_sold_in__c</fullName>
    <description>Any regions this product should NOT be sold in? RS Data</description>
    <label>Regions Should NOT be sold in?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>