force-app/main/default/objects/Product2/fields/Reviews_IO__Custom_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Reviews_IO__Custom_Attribute__c</fullName>
    <label>Custom Attribute</label>
    <length>100</length>
    <type>Text</type>
</CustomField>