force-app/main/default/objects/Product2/fields/Reviews_IO__GTIN__c.field-meta.xml
<CustomField>
    <fullName>Reviews_IO__GTIN__c</fullName>
    <label>GTIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>