force-app/main/default/objects/Product2/fields/Reviews_IO__Product_Page__c.field-meta.xml
<CustomField>
    <fullName>Reviews_IO__Product_Page__c</fullName>
    <label>Product Page</label>
    <type>Url</type>
</CustomField>