force-app/main/default/objects/Product2/fields/RS_Description__c.field-meta.xml
<CustomField>
    <fullName>RS_Description__c</fullName>
    <description>RS DATA</description>
    <label>RS Description</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>