force-app/main/default/objects/Product2/fields/RS_SKU__c.field-meta.xml
<CustomField>
    <fullName>RS_SKU__c</fullName>
    <label>RS SKU</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>