force-app/main/default/objects/Product2/fields/Section1_description__c.field-meta.xml
<CustomField>
    <fullName>Section1_description__c</fullName>
    <label>Section1_description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>