force-app/main/default/objects/Product2/fields/Section1_Image__c.field-meta.xml
<CustomField>
    <fullName>Section1_Image__c</fullName>
    <label>Section1_Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>