force-app/main/default/objects/Product2/fields/Section1_vertical_heading__c.field-meta.xml
<CustomField>
    <fullName>Section1_vertical_heading__c</fullName>
    <label>Section1_vertical_heading</label>
    <length>20</length>
    <type>Text</type>
</CustomField>