force-app/main/default/objects/Product2/fields/Section2_Description__c.field-meta.xml
<CustomField>
    <fullName>Section2_Description__c</fullName>
    <label>Section2_Description</label>
    <type>TextArea</type>
</CustomField>