force-app/main/default/objects/Product2/fields/Section2_Vertical_Heading__c.field-meta.xml
<CustomField>
    <fullName>Section2_Vertical_Heading__c</fullName>
    <label>Section2_Vertical_Heading</label>
    <length>20</length>
    <type>Text</type>
</CustomField>