force-app/main/default/objects/Product2/fields/Section3_Description__c.field-meta.xml
<CustomField>
    <fullName>Section3_Description__c</fullName>
    <label>Section3_Description</label>
    <type>TextArea</type>
</CustomField>