force-app/main/default/objects/Product2/fields/Section3_Image__c.field-meta.xml
<CustomField>
    <fullName>Section3_Image__c</fullName>
    <label>Section3_Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>