force-app/main/default/objects/Product2/fields/Short_Description_Luckins__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_Luckins__c</fullName>
    <description>LICKINS DATA</description>
    <label>Short Description - Luckins</label>
    <length>250</length>
    <type>Text</type>
</CustomField>