force-app/main/default/objects/Product2/fields/Special_Order_Part__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies product in catalogue that is not available from stock</inlineHelpText>
    <label>Special Order Part</label>
    <type>Checkbox</type>
</CustomField>