force-app/main/default/objects/Product2/fields/Standards__c.field-meta.xml
<CustomField>
    <fullName>Standards__c</fullName>
    <label>Standards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAMI ES60601-1</fullName>
            </value>
            <value>
                <fullName>AS/NZS 60950.1</fullName>
            </value>
            <value>
                <fullName>AS/NZS61558-1/-2-16</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BS/EN61558</fullName>
            </value>
            <value>
                <fullName>BSI IS13252</fullName>
            </value>
            <value>
                <fullName>BSMI</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CCC GB4943</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>CNS14336-1</fullName>
            </value>
            <value>
                <fullName>CS22.2 No8</fullName>
            </value>
            <value>
                <fullName>CSA C22.2 NO. 62368-1</fullName>
            </value>
            <value>
                <fullName>CSUUS</fullName>
            </value>
            <value>
                <fullName>CTick</fullName>
            </value>
            <value>
                <fullName>CUL</fullName>
            </value>
            <value>
                <fullName>CURUS</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Dimming</fullName>
            </value>
            <value>
                <fullName>Double Insulation</fullName>
            </value>
            <value>
                <fullName>EAC</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 004</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 005</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 006</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 007</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 008</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 009</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 010</fullName>
            </value>
            <value>
                <fullName>EAC TP TC 011</fullName>
            </value>
            <value>
                <fullName>EN61000-3-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>