force-app/main/default/objects/Product2/fields/Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>Stock_Code__c</fullName>
    <label>Stock Code</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>