force-app/main/default/objects/Product2/fields/TSI_Code__c.field-meta.xml
<CustomField>
    <fullName>TSI_Code__c</fullName>
    <externalId>true</externalId>
    <label>TSI Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>