force-app/main/default/objects/Product2/fields/Unit_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unit_Weight__c</fullName>
    <label>Unit Weight (Kg)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>