force-app/main/default/objects/Product2/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>