force-app/main/default/objects/Product2/fields/Volume_10__c.field-meta.xml
<CustomField>
    <fullName>Volume_10__c</fullName>
    <label>Volume 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>