force-app/main/default/objects/Product2/fields/Volume_1__c.field-meta.xml
<CustomField>
    <fullName>Volume_1__c</fullName>
    <label>Volume 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>