force-app/main/default/objects/Product2/fields/Volume_2__c.field-meta.xml
<CustomField>
    <fullName>Volume_2__c</fullName>
    <label>Volume 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>