force-app/main/default/objects/Product2/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>RS Data - Individual Box Dimensions</description>
    <inlineHelpText>RS Data - Individual Box Dimensions</inlineHelpText>
    <label>Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>