force-app/main/default/objects/Product2/validationRules/Buy_Price_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Price_1</fullName>
    <active>false</active>
    <errorConditionFormula>(ISBLANK(Volume_1__c) &amp;&amp; !ISBLANK(Buy_Price_1__c)) || (!ISBLANK(Buy_Price_1__c) &amp;&amp; Buy_Price_1__c &gt; Buy_Price__c)</errorConditionFormula>
    <errorDisplayField>Buy_Price_1__c</errorDisplayField>
    <errorMessage>Value must be less than Buy Price (and Volume 1 must be specified)!</errorMessage>
</ValidationRule>