force-app/main/default/objects/Product2/validationRules/Buy_Price_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Price_10</fullName>
    <active>false</active>
    <errorConditionFormula>((ISBLANK(Volume_10__c) || ISBLANK(Buy_Price_9__c)) &amp;&amp; !ISBLANK(Buy_Price_10__c)) || 
(!ISBLANK(Buy_Price_10__c) &amp;&amp; Buy_Price_10__c &gt; Buy_Price_9__c)</errorConditionFormula>
    <errorDisplayField>Buy_Price_10__c</errorDisplayField>
    <errorMessage>Value must be less than Buy Price 9 (which must be defined, along with Volume 10 field)!</errorMessage>
</ValidationRule>