force-app/main/default/objects/Product2/validationRules/Buy_Price_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Price_2</fullName>
    <active>false</active>
    <errorConditionFormula>((ISBLANK(Volume_2__c) || ISBLANK(Buy_Price_1__c)) &amp;&amp; !ISBLANK(Buy_Price_2__c)) || 
(!ISBLANK(Buy_Price_2__c) &amp;&amp; Buy_Price_2__c &gt; Buy_Price_1__c)</errorConditionFormula>
    <errorDisplayField>Buy_Price_2__c</errorDisplayField>
    <errorMessage>Value must be less than Buy Price 1 (which must be defined, along with Volume 2 field)!</errorMessage>
</ValidationRule>