force-app/main/default/objects/Product2/validationRules/Buy_Price_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Price_4</fullName>
    <active>false</active>
    <errorConditionFormula>((ISBLANK(Volume_4__c) || ISBLANK(Buy_Price_3__c)) &amp;&amp; !ISBLANK(Buy_Price_4__c)) || 
(!ISBLANK(Buy_Price_4__c) &amp;&amp; Buy_Price_4__c &gt; Buy_Price_3__c)</errorConditionFormula>
    <errorDisplayField>Buy_Price_4__c</errorDisplayField>
    <errorMessage>Value must be less than Buy Price 3 (which must be defined, along with Volume 3 field)!</errorMessage>
</ValidationRule>