force-app/main/default/objects/Product2/validationRules/Buy_Price_7.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Price_7</fullName>
    <active>false</active>
    <errorConditionFormula>((ISBLANK(Volume_7__c) || ISBLANK(Buy_Price_6__c)) &amp;&amp; !ISBLANK(Buy_Price_7__c)) || 
(!ISBLANK(Buy_Price_7__c) &amp;&amp; Buy_Price_7__c &gt; Buy_Price_6__c)</errorConditionFormula>
    <errorDisplayField>Buy_Price_7__c</errorDisplayField>
    <errorMessage>Value must be less than Buy Price 6 (which must be defined, along with Volume 7 field)!</errorMessage>
</ValidationRule>