force-app/main/default/objects/Product2/validationRules/Buy_Price_8.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_Price_8</fullName>
    <active>false</active>
    <errorConditionFormula>((ISBLANK(Volume_8__c) || ISBLANK(Buy_Price_7__c)) &amp;&amp; !ISBLANK(Buy_Price_8__c)) || 
(!ISBLANK(Buy_Price_8__c) &amp;&amp; Buy_Price_8__c &gt; Buy_Price_7__c)</errorConditionFormula>
    <errorDisplayField>Buy_Price_8__c</errorDisplayField>
    <errorMessage>Value must be less than Buy Price 7 (which must be defined, along with Volume 8 field)!</errorMessage>
</ValidationRule>